--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PORT=8080
 NODE_ENV=production
 
 #url mongodb
-MONGO_DB_URL='mongodb+srv://nguyenphung:140403Nguyen@cluster0.k0twr.mongodb.net/book-shop'
+MONGO_DB_URL='mongodb+srv://truongquynh0921:123Quynh@cluster0.9qisg.mongodb.net/book-shop'
 
 #mật khẩu mặc định khi tạo fake data cho user
 MIGRATION_USER_PASSWORD=123456
